# tri9t-ct200-qa

./: .env.example  .gitignore  APPROACH.md  PRD.md  README.md  TRD.md  pyproject.toml  v1_tree.txt  v2_tree.txt
app/: __init__.py  config.py  db.py  main.py
app/generation/: __init__.py  llm_client.py  prompt.py  service.py  store.py
app/ingestion/: __init__.py  service.py
app/models/: __init__.py  orm.py  schemas.py
app/parser/: __init__.py  hashing.py  pdf_extract.py  pdf_tree.py
app/routers/: documents.py  generations.py  nodes.py  selections.py
app/selections/: __init__.py  service.py
app/staleness/: __init__.py  service.py
app/versioning/: __init__.py  matcher.py
data/: .gitkeep
scripts/: demo_flow.py  dump_tree.py
scripts/output/: ct200_manual_tree.txt  ct200_manual_v2_tree.txt  dump_tree_run.txt
tests/: conftest.py  test_api_documents_nodes.py  test_api_selections.py  test_generation_contract.py  test_ingestion.py  test_parser_irregularities.py  test_staleness.py  test_versioning.py
