[project]
name = "tri9t-ct200"
version = "0.1.0"
description = "CardioTrack CT-200 QA Traceability System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
